--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@
 .profile-pic img {
   width: 100%;
   height: auto;
+  max-width: 130px;
+  max-height: 130px;
+  object-fit: cover;
 }
 
 .tracker {
@@ -372,6 +375,9 @@ h3 {
 
 .card {
   margin-bottom: 60px;
+  display: inline-block;
+  max-width: 150px;
+  text-align: center
 }
 
 .card .role {
