--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ h3 {
   margin-bottom: 60px;
   display: inline-block;
   max-width: 150px;
-  text-align: center
+  text-align: center;
 }
 
 .card .role {
