--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
 .profile-pic img {
   width: 100%;
   height: auto;
-  object-fit: cover;
 }
 
 .tracker {
@@ -372,11 +371,7 @@ h3 {
 }
 
 .card {
-  width: 100%;
-  max-width: 600px; /* Adjust as needed */
-  padding: 16px;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 60px;
 }
 
 .card .role {
@@ -513,7 +508,6 @@ a.hoverline:hover {
 
 .card.large .card-image {
   height: 230px;
-  overflow: hidden;
 }
 
 .card.large .card-content {
@@ -617,11 +611,7 @@ small {
     margin-bottom: 40px;
   }
   .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap; /* Prevents compression */
-    gap: 16px;
+    margin: 0 auto;
   }
   nav.hide-on-large.only.trigger {
     display: block;
